# rabbit

./: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
src/: disjunctive.rs  lib.rs  numerical.rs
src/numerical/: interval.rs  polyhedra.rs  zonotope.rs
