[package]
name = "rabbit"
version = "0.1.0"
authors = ["Greg Anderson <ganderso@cs.utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21.1"
replace_with = "0.1.7"
libc = "0.2.76"

[build-dependencies]
bindgen = "0.55.1"
